Update WifiManager#reportImpactToCreateIfaceRequest per API council
DONE: Rename the method name to reportCreateInterfaceImpact
DONE: Have a InterfaceCreationConsequence class to replace the Pair<Integer, String[]>.
Not done: Recommend: Have a callback class to replace the BiConsumer.
DONE: Recommend: Rename queryForNewInterface to requireNewInterface
DONE: Replace IllegalArgumentException with NullPointerException, you can use Objects.requireNonNull.

Bug: 220079537
Test: atest WifiManagerTest WifiServiceImplTest
Test: android.net.wifi.cts.WifiManagerTest#testIsItPossibleToCreateInterface
Change-Id: I89f7d7bed8bac22c0ed82672e6c77eeaa01ebad8